trying to add Windows functionality